--- a/app/src/main/res/layout/photo_slider_item.xml
+++ b/app/src/main/res/layout/photo_slider_item.xml
@@ -10,5 +10,6 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         tools:ignore="contentDescription" />
 </LinearLayout>
