--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#877b7b</color>
-    <color name="colorPrimaryDark">#716868</color>
-    <color name="colorAccent">#f88683</color>
+    <color name="colorPrimary">#877B7B</color>      <!-- Closest material #757575 -->
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#F88683</color>   <!-- Closest material #ff8a80 -->
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="gray_background_1">#fafafa</color>
-    <color name="gray_background_2">#f5f5f5</color>
-    <color name="gray_background_3">#eeeeee</color>
-    <color name="gray_background_4">#e0e0e0</color>
-    <color name="gray_background_5">#bdbdbd</color>
-    <color name="gray_background_6">#9e9e9e</color>
-    <color name="gray_background_7">#757575</color>
-    <color name="gray_background_8">#616161</color>
-    <color name="divider_color">@color/gray_background_4</color>
-    <color name="dark_divider_color">@color/gray_background_8</color>
+    <color name="background_color">#F2F2F2</color> <!-- Closest material #f5f5f5 -->
+    <color name="support_color">#DAE0E6</color>
+    <color name="divider_color">@color/support_color</color>
 
     <!-- view pager dots -->
     <color name="view_pager_active_dot">@color/black</color>
-    <color name="view_pager_inactive_dot">@color/gray_background_3</color>
+    <color name="view_pager_inactive_dot">@color/colorPrimary</color>
 </resources>
