--- a/app/src/main/res/layout/master_review.xml
+++ b/app/src/main/res/layout/master_review.xml
@@ -11,13 +11,13 @@
 
     <TextView
         android:id="@+id/review_author"
-        style="@style/TextAppearance.AppCompat.Body2"
+        style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/review_date"
-        style="@style/TextAppearance.AppCompat.Caption"
+        style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_review_date_margin_top"
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/review_text"
-        style="@style/TextAppearance.AppCompat.Body1"
+        style="@style/Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_review_text_margin_top"
