--- a/app/src/main/res/layout/master_sign.xml
+++ b/app/src/main/res/layout/master_sign.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/main_part"
-        style="@style/TextAppearance.AppCompat.Caption"
+        style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="@dimen/master_signs_drawable_padding"
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/secondary_part"
-        style="@style/TextAppearance.AppCompat.Caption"
+        style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="@dimen/master_signs_drawable_padding"
