--- a/app/src/main/res/layout/suitable_master.xml
+++ b/app/src/main/res/layout/suitable_master.xml
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/name"
-        style="@style/TextAppearance.AppCompat.Body2"
+        style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/master_suitable_master_name_margin_start"
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/role"
-        style="@style/TextAppearance.AppCompat.Body1"
+        style="@style/Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_suitable_master_space_between_name_and_role"
@@ -40,14 +40,14 @@
 
     <TextView
         android:id="@+id/price"
-        style="@style/TextAppearance.AppCompat.Body2"
+        style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/name" />
 
     <TextView
-        style="@style/TextAppearance.AppCompat.Caption"
+        style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_suitable_master_about_margin_top"
@@ -60,7 +60,7 @@
     <!-- Stars -->
     <TextView
         android:id="@+id/rating_main_part"
-        style="@style/TextAppearance.AppCompat.Body2"
+        style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/master_suitable_master_rating_margin_top"
@@ -72,7 +72,7 @@
 
     <TextView
         android:id="@+id/rating_secondary_part"
-        style="@style/TextAppearance.AppCompat.Body1"
+        style="@style/Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/rating_main_part"
