Photo gradient management

--- a/app/src/main/res/layout/photo_slider_item.xml
+++ b/app/src/main/res/layout/photo_slider_item.xml
@@ -11,11 +11,11 @@
         android:scaleType="centerCrop"
         tools:ignore="contentDescription" />
 
-
     <View
+        android:id="@+id/gradient"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@drawable/trending_gradient_shape" />
-
 </FrameLayout>
 
